<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AtletasOutrosLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletasOutrosFragment" >

    <EditText
        android:id="@+id/etRecordeOutros"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etRecorde"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAcademiaOutros" />

    <EditText
        android:id="@+id/etAcademiaOutros"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etAcademia"
        android:inputType="text"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroOutros" />

    <EditText
        android:id="@+id/etNomeOutros"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etDataNascimentoOutros"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etDataDeNascimento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeOutros" />

    <EditText
        android:id="@+id/etBairroOutros"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etBairro"
        android:inputType="text"
        android:shadowColor="#000000"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoOutros" />

    <Button
        android:id="@+id/btnCadastrarOutros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRecordeOutros" />

</androidx.constraintlayout.widget.ConstraintLayout>